// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PreviousLeavesOtherReasonDetails when the user has no previous leaves reported renders the page 1`] = `
<QuestionPage
  onSave={[Function]}
  title="Other leave, benefits, and income"
>
  <Heading
    level="2"
    size="1"
  >
    Tell us about your previous leave
  </Heading>
  <Hint
    className="margin-bottom-3"
  >
    Enter details about each period of leave taken between January 1, 2021 and January 1, 2021. A leave period begins on the day you first went on leave and ends on the last day of leave. If you were on leave intermittently, your leave period begins on the first day you went on leave and ends on the very last day.
  </Hint>
  <RepeatableFieldset
    addButtonLabel="Add another previous leave"
    entries={
      Array [
        PreviousLeave {
          "is_for_current_employer": null,
          "leave_end_date": null,
          "leave_minutes": null,
          "leave_reason": null,
          "leave_start_date": null,
          "previous_leave_id": null,
          "type": null,
          "worked_per_week_minutes": null,
        },
      ]
    }
    headingPrefix="Previous leave"
    limit={6}
    limitMessage="You can only add up to 6 leaves"
    onAddClick={[Function]}
    onRemoveClick={[Function]}
    removeButtonLabel="Remove this previous leave"
    render={[Function]}
  />
</QuestionPage>
`;

exports[`PreviousLeavesOtherReasonDetails when user's claim has previous leaves renders the page 1`] = `
<QuestionPage
  onSave={[Function]}
  title="Other leave, benefits, and income"
>
  <Heading
    level="2"
    size="1"
  >
    Tell us about your previous leave
  </Heading>
  <Hint
    className="margin-bottom-3"
  >
    Enter details about each period of leave taken between January 1, 2021 and January 1, 2021. A leave period begins on the day you first went on leave and ends on the last day of leave. If you were on leave intermittently, your leave period begins on the first day you went on leave and ends on the very last day.
  </Hint>
  <RepeatableFieldset
    addButtonLabel="Add another previous leave"
    entries={
      Array [
        PreviousLeave {
          "is_for_current_employer": null,
          "leave_end_date": "2021-01-26",
          "leave_minutes": 1500,
          "leave_reason": "Caring for a family member with a serious health condition",
          "leave_start_date": "2021-01-01",
          "previous_leave_id": 89,
          "type": "other_reason",
          "worked_per_week_minutes": 2400,
        },
        PreviousLeave {
          "is_for_current_employer": null,
          "leave_end_date": "2020-12-13",
          "leave_minutes": 1200,
          "leave_reason": "Bonding with my child after birth or placement",
          "leave_start_date": "2020-11-21",
          "previous_leave_id": 9,
          "type": "other_reason",
          "worked_per_week_minutes": 2400,
        },
      ]
    }
    headingPrefix="Previous leave"
    limit={6}
    limitMessage="You can only add up to 6 leaves"
    onAddClick={[Function]}
    onRemoveClick={[Function]}
    removeButtonLabel="Remove this previous leave"
    render={[Function]}
  />
</QuestionPage>
`;

exports[`PreviousLeavesOtherReasonDetails when user's claim has previous leaves renders the page 2`] = `
<Fragment>
  <InputChoiceGroup
    choices={
      Array [
        Object {
          "checked": false,
          "label": "An illness or injury",
          "value": "An illness or injury",
        },
        Object {
          "checked": false,
          "label": "Pregnancy",
          "value": "Pregnancy",
        },
        Object {
          "checked": false,
          "label": "Bonding with my child after birth or placement",
          "value": "Bonding with my child after birth or placement",
        },
        Object {
          "checked": true,
          "label": "Caring for a family member",
          "value": "Caring for a family member with a serious health condition",
        },
        Object {
          "checked": false,
          "label": "Managing family affairs while a family member was on active duty in the armed forces",
          "value": "Managing family affairs while a family member is on active duty in the armed forces",
        },
        Object {
          "checked": false,
          "label": "Caring for a family member who served in the armed forces",
          "value": "Caring for a family member who serves in the armed forces",
        },
      ]
    }
    hint="If you didn’t take leave for one of these reasons, go back to the previous screen and select No."
    label="Why did you need to take this leave?"
    name="previous_leaves_other_reason[0].leave_reason"
    onChange={[Function]}
    smallLabel={true}
    type="radio"
    value="Caring for a family member with a serious health condition"
  />
  <InputChoiceGroup
    choices={
      Array [
        Object {
          "checked": false,
          "label": "Yes",
          "value": "true",
        },
        Object {
          "checked": false,
          "label": "No",
          "value": "false",
        },
      ]
    }
    hint="This is the same Employer Identification Number you entered earlier in your application. After you submit your application, this employer will be able to review it. We won’t share any leave you took from other employers."
    label="Did you take leave from this employer? EIN: 12‑3456789"
    name="previous_leaves_other_reason[0].is_for_current_employer"
    onChange={[Function]}
    smallLabel={true}
    type="radio"
    value=""
  />
  <InputDate
    dayLabel="Day"
    example="MM / DD / YYYY"
    label="What was the first day of this leave?"
    monthLabel="Month"
    name="previous_leaves_other_reason[0].leave_start_date"
    onChange={[Function]}
    smallLabel={true}
    value="2021-01-01"
    yearLabel="Year"
  />
  <InputDate
    dayLabel="Day"
    example="MM / DD / YYYY"
    label="What was the last day of this leave?"
    monthLabel="Month"
    name="previous_leaves_other_reason[0].leave_end_date"
    onChange={[Function]}
    smallLabel={true}
    value="2021-01-26"
    yearLabel="Year"
  />
  <InputHours
    hint={
      <React.Fragment>
        <p>
          Enter the number of hours you would have worked each week, if you were not on leave.
        </p>
        <Details
          label="What if my schedule was not consistent?"
        >
          <Trans
            i18nKey="pages.claimsPreviousLeavesOtherReasonDetails.workedPerWeekMinutesDetails"
          />
        </Details>
      </React.Fragment>
    }
    hoursLabel="Hours"
    label="How many hours would you normally have worked per week at the time you took this leave?"
    minutesIncrement={15}
    minutesLabel="Minutes"
    name="previous_leaves_other_reason[0].worked_per_week_minutes"
    onChange={[Function]}
    smallLabel={true}
    value={2400}
  />
  <InputHours
    hint="Add up all the hours you took off between the first and last day of this leave and enter the total. For example, if you took off 8 hours in one week and 12 hours in another, you should enter 20 hours."
    hoursLabel="Hours"
    label="What was the total number of hours you took off?"
    minutesIncrement={15}
    minutesLabel="Minutes"
    name="previous_leaves_other_reason[0].leave_minutes"
    onChange={[Function]}
    smallLabel={true}
    value={1500}
  />
</Fragment>
`;

exports[`PreviousLeavesOtherReasonDetails when user's claim has previous leaves renders the page 3`] = `"If your weekly schedule was not consistent, enter the average number of hours you would have worked per week. For example, if your leave was across two different weeks, and your normal work schedule was 40 hours in one week and 20 hours in the next, you should enter 30 hours."`;
